@startuml

title __VISTA's Class Diagram__\n

  namespace  {
    namespace ista {
      class Vista.BarChart {
          - categoryAxis_ : String
          + BarChart()
          + BarChart()
          + BarChart()
          + createChart()
          + createDataset()
      }
    }
  }
  

  namespace  {
    namespace ista {
      abstract class Vista.Chart {
          # chart_ : JFreeChart
          # dataMap_ : Map<String, Double>
          # title_ : String
          # xAxisName_ : String
          # yAxisName_ : String
          + Chart()
          + Chart()
          + Chart()
          + DrawChart()
          {abstract} + createChart()
          {abstract} + createDataset()
          + reArrangeYAxisRange()
          + setDataMap_()
          # createChart()
          # reduceSizeArray()
      }
    }
  }
  

  namespace  {
    namespace ista {
      class Vista.LineChart {
          - categoryAxis_ : String
          + LineChart()
          + LineChart()
          + LineChart()
          + createChart()
          + createDataset()
      }
    }
  }
  

  namespace  {
    namespace ista {
      class Vista.PieChart {
          + PieChart()
          + PieChart()
          + PieChart()
          + createChart()
          + createDataset()
          # setBg()
      }
    }
  }
  

  namespace  {
    namespace ista {
      class Vista.Pruebasview {
          {static} + main()
      }
    }
  }
  

  namespace  {
    namespace ista {
      abstract class Vista.View {
          # matchList : List<Match>
          # playersNameList : List<String>
          # positionsNumPlayersMap : Map<POSITIONS, Integer>
          # teamStatsMap : Map<RESULT, Long>
          # teamToShow : String
          # teamsList : List<String>
          {abstract} + display()
          + setDataMatches()
          + setDataPlayerPositionInTeam()
          + setDataPlayers()
          + setTeam()
          + setTeamStats()
          + setTeamsList()
          # View()
      }
    }
  }
  

  namespace  {
    namespace ista {
      class Vista.ViewFacade {
          + ViewFacade()
          + ViewFacade()
          + createView()
          + getVista()
          + updateView()
      }
    }
  }
  

  namespace  {
    namespace ista {
      class Vista.VistaCLI {
          + VistaCLI()
          + display()
      }
    }
  }
  

  namespace  {
    namespace ista {
      class Vista.vistaGrafica1 {
          - frame : JFrame
          - listaNombreJugadores : JList<String>
          - panelCharts : JPanel
          - panelLists : JPanel
          - panelPrincipal : JPanel
          - partidosResultadosTable : JTable
          - scrollPanelTabla : JScrollPane
          - teamSelectorComboBox : JComboBox<String>
          + display()
          + setDataPlayerPositionInTeam()
          + setTeamStats()
          + vistaGrafica1()
      }
    }
  }
  

  Vista.BarChart -up-|> Vista.Chart
  Vista.LineChart -up-|> Vista.Chart
  Vista.PieChart -up-|> Vista.Chart
  Vista.ViewFacade o-- Modelo.Team : teamToShow
  Vista.ViewFacade o-- Vista.View : vista
  Vista.VistaCLI -up-|> Vista.View
  Vista.vistaGrafica1 -up-|> Vista.View
  Vista.vistaGrafica1 o-- Vista.Chart : barChartNumJugadoresPorPos
  Vista.vistaGrafica1 o-- Vista.Chart : pieChartPartidosGanadosPerdidosEmpatados


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
